# attract-ia-tcc

./: Makefile  pyproject.toml  sh.exe.stackdump
.github/workflows/: pytest.yml
src/: app.py  config.py  database.py  routes.py
src/static/css/: about.css  boards.css  cleanheader.css  createboard.css  createpicture.css  editfavorites.css  editprofile.css  header.css  inboard.css  index.css  listboards.css  login.css  profile.css  register.css  resetpassword.css  welcome.css
src/static/js/: mobile-navbar.js  script.js  scriptComplete.js  scriptInProgress.js  scriptSubActivites.js  scriptSubCard.js  scriptToDo.js
src/templates/: about.html  boards.html  cardComplete.html  cardInProgress.html  cardToDo.html  cleanheader.html  createboard.html  createpicture.html  editfavorites.html  editperfil.html  editprofile.html  head.html  header.html  inboard.html  index.html  listboards.html  login.html  popupSubCards.html  profile.html  register.html  resetpassword.html  subActivites.html  welcome.html
